# wishlistcart

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  scenarios.jsonl
core/: Cargo.toml
core/src/: lib.rs  merge.rs  model.rs  ops.rs  publishing.rs  store.rs  urlnorm.rs
dev/: family-check.mjs  host-protocol-test.mjs  install-host.sh  integration.mjs  preview-gallery.html  shot.mjs
docs/plans/: 2026-06-17-wishlistcart.md  2026-07-07-family-page.md  2026-07-07-fields-and-responsive.md  2026-07-07-rust-core-chrome-sync.md  2026-07-07-sync-apps-family-design.md
extension/: background.js  dev-seed.js  gallery.html  gallery.js  manifest.json  popup.html  popup.js  styles.css
extension/src/: storage.js  view.js
extension/src/lib/: classify.js  items.js  scrape.js
family/: index.html
safari/WishlistCart/Shared (App)/: ViewController.swift
safari/WishlistCart/Shared (App)/Resources/: Script.js
safari/WishlistCart/Shared (Extension)/: SafariWebExtensionHandler.swift
safari/WishlistCart/WishlistCart/: AppDelegate.swift  ViewController.swift
safari/WishlistCart/WishlistCart Extension/: SafariWebExtensionHandler.swift
safari/WishlistCart/WishlistCart.xcodeproj/: project.pbxproj
safari/WishlistCart/WishlistCart/Base.lproj/: Main.storyboard
safari/WishlistCart/WishlistCart/Resources/: Script.js
safari/WishlistCart/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
safari/WishlistCart/macOS (App)/: AppDelegate.swift
tests/: classify.test.js  items.test.js  scrape.test.js  storage.test.js
(+2 files in other folders)
