[package]
name = "wishlistcart-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tempfile = "3"

[[bin]]
name = "wishlist-host"
path = "src/bin/wishlist-host.rs"
